feat: PDF Sign & Verify implementation from @rzaripov1990
