# src/main/java/kz/ncanode/dto/request/PdfVerifyRequest.java
@@ -1,0 +1,17 @@
+package kz.ncanode.dto.request;
+
+import lombok.Data;
+import lombok.EqualsAndHashCode;
+import lombok.experimental.SuperBuilder;
+import lombok.extern.jackson.Jacksonized;
+
+import javax.validation.constraints.NotEmpty;
+
+@Jacksonized
+@EqualsAndHashCode(callSuper = true)
+@Data
+@SuperBuilder
+public class PdfVerifyRequest extends VerifyRequest {
+	@NotEmpty
+	private String pdf;
+}
