# src/main/java/kz/ncanode/dto/response/PdfSignResponse.java
@@ -1,0 +1,14 @@
+package kz.ncanode.dto.response;
+
+import lombok.Data;
+import lombok.EqualsAndHashCode;
+import lombok.experimental.SuperBuilder;
+import lombok.extern.jackson.Jacksonized;
+
+@Jacksonized
+@EqualsAndHashCode(callSuper = true)
+@Data
+@SuperBuilder
+public class PdfSignResponse extends StatusResponse {
+	private String pdf;
+}
